--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -1,9 +1,7 @@
-
-
 body
 {
+    max-width: 2900px;
     background-size: cover;
-    background-repeat: no-repeat;
     background: rgb(29, 31, 41);
     align-items: center;
     height: 150vh;
