--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
@@ -212,7 +212,7 @@ img {
 // <!-- Related-Games -->
 
 
-.related-games {
+.more-games {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
