--- a/01-HTML-CSS/07-SCSS/yahya/style2.scss
+++ b/01-HTML-CSS/07-SCSS/yahya/style2.scss
@@ -4,6 +4,7 @@ body{
    
    
 }
+
 a{
    font-size: xx-large;
  /* background-color: black;*/
@@ -29,9 +30,10 @@ p{
    align-items: center;  
 }
 /*////////////////////////////(header)////////////////////////////////////////*/
+
 .header{
-   display: block;
-   background-color: #0C090A;
+  display: block;
+  background-color: #0C090A;
   justify-content: end;
   font-size: 40px;
   height: 80px;
@@ -52,9 +54,10 @@ p{
       justify-self:center;
     }   
    }
-/*/////////////////////////////////////////////////////////////////////*/ 
+/*///////////////////////////////////////////////////////////////////////////////*/ 
 
 /*////////////////////////////(Menu/flex)////////////////////////////////////////*/
+
 .menu2{
    display: flex;
    flex-wrap: wrap;
@@ -65,13 +68,18 @@ p{
 
    .box{
       
-      border: solid black;
-      background-color: #999;
+     
+     
       width: 100px;
-      margin: 10px;
+      margin: 35px;
+   }
+   a:hover{
+      border: solid black; 
    }
 }
+
 /*////////////////////////////(Main has main articil/grid)////////////////////////////////////////*/
+
 .main{
 
    display: grid;
@@ -86,8 +94,6 @@ p{
       border-radius: 15px;
    
    }
-
-
   img{
     height: 400px;
     width: 400px;
@@ -102,6 +108,8 @@ p{
     background-repeat: no-repeat;
     background-size: 100% 100%;
    background-size: cover;
+   width: 100% ;
+   height: 100%;
     p{
     margin-top: 900px;
  }
@@ -120,7 +128,7 @@ p{
    margin-top: 300px;
    
    .box{
-    
+      
       border-radius: 15px;
    }
    img{
@@ -150,7 +158,8 @@ p{
       border-radius: 15px;
    }
 }
-/*////////////////////////////(small artical grid)////////////////////////////////////////*/
+    /*////////////////////////////(small artical grid)////////////////////////////////////////*/
+
 .num3{
    display: grid;
    background: color #999;
