--- a/01-HTML-CSS/08-Responsive/Tal/02-moreThenQuery/style.scss
+++ b/01-HTML-CSS/08-Responsive/Tal/02-moreThenQuery/style.scss
@@ -27,7 +27,7 @@ h1{
     @media only screen and (max-width: 75ch) {
 
         margin: 30px;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(1,1fr);
 
     }
 }
