--- a/01-HTML-CSS/07-SCSS/Etan/style.scss
+++ b/01-HTML-CSS/07-SCSS/Etan/style.scss
@@ -11,6 +11,7 @@ body {
         align-items: center;
          font-size: 5vh;
          margin: auto;
+         padding-bottom: 3em;
          color: #dbd8e3;
      }
 }
@@ -20,7 +21,6 @@ body {
     position: relative;
     width: 1440px;
     max-width: 1440px;
-    
     grid-template-columns: repeat(5,1fr);
 
      /*media quary*/
@@ -53,10 +53,10 @@ body {
         background: #352f44;
         color: rgb(0, 0, 0);
         border: 1px solid gray;
-        border-radius: 3vw;
+        border-radius: 3em;
         height: 200px;
         width: 200px;
-        margin: 5px;
+        margin-bottom: 2em;
         z-index: 0;
 
         &:hover {
@@ -64,13 +64,13 @@ body {
         }
 
         video {
-            border-radius: 3vw;
+            border-radius: 3em;
             width: 100%;
         }
 
         img {
             position: absolute;
-            border-radius: 3vw;
+            border-radius: 3em;
             align-items: center;
             width: 100%;
         }
@@ -101,7 +101,7 @@ body {
             font-weight: 100;
             z-index: 1;
             bottom: 0;
-            margin: 10%;
+            margin: 1em;
         }
 
         p {
