--- a/01-HTML-CSS/07-SCSS/yahya/style2.scss
+++ b/01-HTML-CSS/07-SCSS/yahya/style2.scss
@@ -241,3 +241,18 @@ h1{
 img:hover{
     transform: scale(1.2);
 }
+@media (max-width:780px) {
+   .box.gmain{
+      float: none;
+      background-size: 200px;
+
+      margin-left: auto;
+      margin-right: auto;
+      .box{
+         width: 50px;
+         height: 50px;
+      }
+   }
+   
+}
+   
