--- a/01-HTML-CSS/07-SCSS/Etan/style.scss
+++ b/01-HTML-CSS/07-SCSS/Etan/style.scss
@@ -125,8 +125,8 @@ body {
             font-size: 2vh;
             font-weight: 100;
             z-index: 1;
-            bottom: 0;
-            margin: 1em;
+            bottom: 3em;
+            line-height: 1rem;
         }
 
         p {
