--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/style2.scss
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/style2.scss
@@ -7,7 +7,6 @@ body {
 
 }
 
-
 .header {
 
     background: #171717;
@@ -19,6 +18,10 @@ body {
 
     img:hover {
         cursor: pointer;
+    }
+
+    .logosmall{
+        display: none;
     }
 
     &__element {
@@ -71,9 +74,6 @@ body {
         gap: 1em;
         align-items: center;
         margin-inline-end: 2em;
-
-
-
 
         &__box {
 
@@ -156,6 +156,10 @@ body {
 
             }
 
+            a{
+                display: none;
+            }
+
         }
 
     }
@@ -170,7 +174,14 @@ body {
     width: 93%;
     margin: auto;
     margin-top: 2em;
+    margin-bottom: 30px;
 
+    .scroll{
+        margin-right: 10px;
+        color: red;
+        font-size: 17px;
+        text-shadow: 0.2px 0.2px 30px rgb(161, 161, 161);
+    }
 
     &__cards {
 
@@ -180,9 +191,8 @@ body {
         margin-right: 10px;
         border-radius: 20px;
 
-
         &::-webkit-scrollbar {
-            width: 0;
+            width: 0px;
         }
 
     }
@@ -196,8 +206,8 @@ body {
         display: flex;
         align-items: center;
         transition: all 0.8s;
-        min-width: 200px;
-        height: 80%;
+        min-width: 210px;
+        height: 79%;
         margin-right: 10px;
 
         &:hover {
@@ -278,7 +288,7 @@ body {
     flex-direction: column;
     align-items: center;
 
-    .title {
+    &__title{
         font-size: 40px;
         width: 93.5%;
     }
@@ -564,7 +574,6 @@ body {
 
 }
 
-
 @media only screen and (max-width:900px) {
 
     
@@ -683,7 +692,7 @@ body {
 
             .card {
                 height: 60%;
-                width: 90px;
+                min-width: 120px;
             }
         }
 
@@ -692,7 +701,7 @@ body {
             .morecard {
 
                 height: 70%;
-                width: 50px;
+                min-width: 120px;
 
                 h1, p {
                     font-size: 15px;
@@ -734,25 +743,56 @@ body {
     .header{
 
         display: flex;
-        flex-direction: column;
-        align-content: center;
-        justify-content: center;
 
-        &__menu{
+        img{
+            width: 100px;
+        }
+        .logobig{
+            display: none;
+        }
 
-            &__account{
-                flex-direction: row-reverse;
+        .logosmall{
+            display: block;
+        }
+
+    }
+    .menubar{
+
+        &__cards {
+
+            .card {
+                height: 50%;
+                min-width: 110px;
+            }
+        }
+
+        &__more {
+
+            .morecard {
+
+                height: 50%;
+                width: 60px;
+
+                h1, p {
+                    font-size: 15px;
+                }
+            }
+        }
+
+        &__account{
+
+            .abutton{
+                display: none;
             }
         }
 
     }
-
     .wrapper {
 
         .wrapper__title {
 
             width: 50%;
-            font-size: 24px;
+            font-size: 20px;
         }
 
         .wrapper__container {
@@ -772,16 +812,62 @@ body {
             }
         }
     }
-
-    .menubar{
-
-        &__
-    }
+   
 }
 
 @media only screen and (max-width:200px) {
 
+    .header{
+        
+       grid-template-columns: 30%, 10%, 10%;
+
+       .logo{
+           margin-right: -30px;
+           margin-left: -10px;
+        
+       }
+       .srch{
+           margin-right: 10px;
+       }
+
+       &__menu{
+           margin-left: -15px;
+       }
+    }
+    .menubar{
+
+        margin-top: 10px;
+        margin-bottom: 10px;
+
+        &__cards {
+
+            height: 40%;
+
+            .card {
+                height: 100%;
+                min-width: 110px;
+                margin-left: 20px;
+            }
+
+        }
+
+        &__more {
+
+            .morecard {
+
+                height: 50%;
+                width: 110px;
+                margin-left: 20px;
+
+                h1, p {
+                    font-size: 15px;
+                }
+            }
+        }
+
+    }
     .wrapper {
+
 
         .wrapper__title {
 
@@ -806,4 +892,5 @@ body {
             }
         }
     }
+
 }
