Create test files

--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/test.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/test.scss
@@ -1,5 +1,5 @@
 
-@media only screen and (max-width: 2900px){
+/*@media only screen and (max-width: 2800px){
     body{
         background: rgb(6, 45, 243);
     }
@@ -10,8 +10,9 @@
         width: 100%;
         align-items: center;
         align-content: center;
-
     }
+
+
 }
 @media only screen and (max-width: 1840px){
     body{
@@ -26,9 +27,16 @@
 
     }
 
+    .container__box
+    {
+        background: rgb(202, 36, 119);
+
+    }
+
 }
 @media only screen and (max-width: 1340px){
     body{
         background: rgb(243, 6, 6);
     }
 }
+*/
