--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -1,6 +1,9 @@
 body
 {
-    max-width: 2900px;
+    max-width: 1920px;
+    max-height: 1080px;
+    align-items: center;
+    align-content: center;
     background-size: cover;
     background: rgb(29, 31, 41);
     align-items: center;
@@ -14,6 +17,7 @@ body
   position: relative;
   left: 170px;
   border-radius: 100px;
+  border: 3px solid white;
   width: 4.3vw;
   height: 100px;
   bottom: 30px;;
@@ -27,13 +31,26 @@ body
   }
 }
 
+.test
+{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 650px;
+  gap: 250px;
+  align-items: center;
+  align-content: center;
+  position: relative;
+}
+
 .container
 {
     display: grid;
+    border: 3px solid white;
+    left: 250px;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(4,300px);
-    height: 150vh;
-    align-items: center;
+    height: 120vh;
     gap: 40px;
     margin-top: 40px;
 
@@ -41,6 +58,7 @@ body
     &__box
     {
         border: 3px solid black;
+        border: 3px solid white;
         border-radius: 50px;
         box-shadow:  0 0 20px rgba(0,0,0,.1);
         transition: 1.2s;
@@ -50,6 +68,16 @@ body
         background-size: cover;
         text-align: center;
         overflow: hidden;
+
+        &__content
+        {
+          display: flex;
+          flex-direction: column;
+          position: relative;
+          top: 40px;
+          transform: translateY(95%);
+          transition: 1.2s;
+        }
 
         &:hover
         {
@@ -63,13 +91,6 @@ body
             }
         }
 
-        &__content
-        {
-            transform: translateY(115%);
-            transition: 1.2s;
-            
-
-        }
 
         &__button
         {
@@ -125,6 +146,7 @@ body
         grid-column-start: 1;
         grid-column-end: 5;
         border-radius: 50px;
+        border: 3px solid white;
         opacity: 0.8;
 
         
@@ -132,6 +154,7 @@ body
         {
           text-align: center;
           margin-top: 160px;
+          
         
         &__btn
         {
@@ -217,11 +240,12 @@ h4
     width: 70%;
     height: 4vh;
     background-color: rgb(29, 31, 41);
+    border: 3px solid white;
     background-size: cover;
     background-position: center;
     text-align: center;
     font-weight: 200;
-    top: -80px;
+    top: -150px;
     left: 19vw;
     position: relative;
   
@@ -298,6 +322,11 @@ h4
     }
   }
 
+  .Action-Adventure
+  {
+    position: relative;
+    bottom: 35vh;
+  }
   .sport
   {
     position: relative;
@@ -309,10 +338,10 @@ h4
     position: relative;
     bottom: 75vh;
   }
+
   .game
   {
-    background-repeat: no-repeat;
-    background-size: cover;
+ 
     
     &_1
     {
