--- a/01-HTML-CSS/08-Responsive/Lior/test.scss
+++ b/01-HTML-CSS/08-Responsive/Lior/test.scss
@@ -1,7 +1,81 @@
+@media only screen and (max-width: 1940px)
+{
+
+
+  .container
+
+  {
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(4,300px);
+  }
+}
+
+@media only screen and (max-width: 1800px)
+{
+  body
+  {
+    background:white;
+  }
+  .container
+  {
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(5,300px);
+  }
+}
+
+@media only screen and (max-width: 1024px ) and(max-height: 1366px)
+{
+  body
+  {
+    background:white;
+  }
+  .container
+  {
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(6,300px);
+    left: -50px;
+
+  &__box
+  {
+    width:150%;
+  }
+
+}
+
+  
+}
+
+@media only screen and (max-width: 720px)
+{
+  body
+  {
+    background:white;
+  }
+  .container
+  {
+    grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(6,300px);
+  }
+}
+
+@media only screen and (max-width: 360px)
+{
+  body
+  {
+    background:white;
+  }
+  .container
+  {
+    grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(7,300px);
+  }
+}
+
+
 body
 {
     max-width: 1920px;
-    max-height: 1080px;
+    max-height: 1280px;
     align-items: center;
     align-content: center;
     background-size: cover;
@@ -16,6 +90,7 @@ body
 {
     width: 100%;
     height: 170vh;
+    left: 0px;
     align-items: center;
     position: absolute;
     align-content: center;
@@ -23,11 +98,11 @@ body
 .logo
 {
   position: relative;
-  left: 170px;
   border-radius: 100px;
   border: 3px solid white;
   width: 4.3vw;
   height: 100px;
+  left: 250px;
   bottom: 30px;;
   transition: 0.8s;
 
@@ -44,11 +119,11 @@ body
     position: absolute;
     display: grid;
     border: 3px solid white;
-    left: 250px;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(4,300px);
-    height: 167vh;
-    width: 1940px;
+    height: 187vh;
+    left: 250px;
+    width: 70%;
     gap: 40px;
     margin-top: 40px;
 
@@ -56,6 +131,7 @@ body
     &__box
     {
         border: 3px solid black;
+        width: 100%;
         border: 3px solid white;
         border-radius: 50px;
         box-shadow:  0 0 20px rgba(0,0,0,.1);
@@ -143,19 +219,24 @@ body
         background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpDr_WJQxJr3hG2-91FwQUDVZcWK2F9QjwBQ&usqp=CAU) ;
         background-repeat: no-repeat;
         background-size: cover;
+        align-items: center;
+        align-content: center;
         grid-column-start: 1;
         grid-column-end: 5;
         border-radius: 50px;
-        left: 250px;
-        width: 1940px;
+        left: 100px;
+        width: 80%;
+        margin-right: 60px;
         border: 3px solid white;
         opacity: 0.8;
 
         
         &__content
         {
+          position: relative;
           text-align: center;
           margin-top: 160px;
+          left: 0px;
           
         
         &__btn
