--- a/01-HTML-CSS/08-Responsive/Lior/test.scss
+++ b/01-HTML-CSS/08-Responsive/Lior/test.scss
@@ -90,7 +90,8 @@ body
 {
     width: 100%;
     height: 170vh;
-    left: 0px;
+    left: -150px;
+    top: 50px;
     align-items: center;
     position: absolute;
     align-content: center;
@@ -120,18 +121,19 @@ body
     display: grid;
     border: 3px solid white;
     grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(4,300px);
-    height: 187vh;
-    left: 250px;
-    width: 70%;
-    gap: 40px;
+    grid-template-rows: repeat(6,300px);
+    height: 217vh;
+    left: 200px;
+    width: 95%;
+    gap: 20px;
     margin-top: 40px;
 
     
     &__box
     {
         border: 3px solid black;
-        width: 100%;
+        width: 90%;
+        height: auto;
         border: 3px solid white;
         border-radius: 50px;
         box-shadow:  0 0 20px rgba(0,0,0,.1);
@@ -224,7 +226,7 @@ body
         grid-column-start: 1;
         grid-column-end: 5;
         border-radius: 50px;
-        left: 100px;
+        left: 300px;
         width: 80%;
         margin-right: 60px;
         border: 3px solid white;
@@ -698,8 +700,8 @@ h4
 // the navbar
 
 .banner {
-    width: 70%;
-    height: 4vh;
+    width: 80%;
+    height: 5vh;
     background-color: rgb(29, 31, 41);
     border: 3px solid white;
     background-size: cover;
