--- a/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
@@ -204,6 +204,32 @@ body {
                 }
 
 
+                &.imgeffect {
+
+                    position: relative;
+
+
+                    img {
+                        position: absolute;
+                        transition: opacity 1s ease-in-out;
+                        left: 100px;
+
+                        &.img-back:hover {
+                            opacity: 0;
+                            cursor: pointer;
+                        }
+                    }
+
+                    p {
+                        position: absolute;
+                        top: 150px;
+
+                    }
+
+
+                }
+
+
             }
 
         }
@@ -579,6 +605,9 @@ body {
                         height: 40vh;
 
 
+
+
+
                     }
 
 
@@ -634,6 +663,45 @@ body {
 
 
                     }
+
+
+                    &.imgeffect {
+                        right: 75px;
+
+                        position: relative;
+
+
+
+                        img {
+                            position: absolute;
+                            transition: opacity 1s ease-in-out;
+                            left: 80px;
+                            width: 40vw;
+                            height: 40vh;
+
+
+                            &.img-back:hover {
+                                opacity: 0;
+                                cursor: pointer;
+
+                            }
+                        }
+
+                        p {
+                            position: absolute;
+                            top: 280px;
+
+
+                        }
+
+
+                    }
+
+
+
+
+
+
 
 
                 }
@@ -774,6 +842,10 @@ body {
                         border: 10px solid rgb(255, 3, 3);
                     }
 
+
+
+
+
                 }
 
 
@@ -815,7 +887,7 @@ body {
                     p {
                         margin-left: -50px;
                     }
-                    
+
 
                     img {
 
@@ -833,7 +905,7 @@ body {
                     grid-column-end: 7;
                     grid-row-start: 10;
                     grid-row-end: 12;
-                     padding-top: 70px;
+                    padding-top: 70px;
 
 
                 }
@@ -866,8 +938,8 @@ body {
                     }
 
                     img {
-                         /*width: 200px;
-                        height: 20vh;*/                        
+                        /*width: 200px;
+                        height: 20vh;*/
                         display: block;
                         margin: auto;
                         border-radius: 10px;
@@ -886,20 +958,608 @@ body {
         }
 
 
-
-
-
-
-
-
-
-
-
-
-
     }
 
 
+    /*the screen changes for phone*/
+    @media only screen and (max-width:700px) {
+
+
+        .header {
+            background-color: rgb(106, 183, 211);
+            /*rgb(4, 44, 58);*/
+            border: 2px black solid;
+            grid-column-start: 1;
+            grid-column-end: 7;
+
+            &:hover {
+                
+                background-color: rgb(106, 183, 211);
+                transition: 1s;
+    
+            }
+
+            h1 {
+                display: inline-block;
+                padding-left: 18%;
+                font-size: 300%;
+                text-shadow:
+                    0 0 7px #fff,
+                    0 0 10px #fff,
+                    0 0 21px #fff,
+                    0 0 42px rgb(0, 255, 242),
+                    0 0 82px rgb(0, 255, 242),
+                    0 0 92px rgb(0, 255, 242),
+                    0 0 102px rgb(0, 255, 242),
+                    0 0 151px rgb(0, 255, 242);
+
+
+            }
+
+
+
+            input {
+                display: flex;
+                position: relative;
+                left: 5%;
+                bottom: 20%;
+                width: 35%;
+                height: 20%;
+                border: 3px solid blue;
+
+            }
+
+            button[type=submit] {
+                border: 3px solid blue;
+                background-color: rgb(144, 214, 238);
+                display: flex;
+                position: relative;
+                left: 42%;
+                bottom: 40%;
+
+
+
+                &:hover {
+                    background-color: rgb(8, 53, 68);
+                    cursor: pointer;
+                    color: white;
+                    font-weight: bold;
+
+
+                }
+
+
+
+
+            }
+
+
+
+            button[type=register] {
+                border-radius: 10px;
+                border: 2px solid blue;
+                font-weight: bold;
+                color: rgb(12, 114, 12);
+                display: flex;
+                position: relative;
+                left: 58%;
+                bottom: 60%;
+
+                &:hover {
+                    color: white;
+                    cursor: pointer;
+                    background-color: rgb(12, 114, 12);
+                    transition: 1s;
+                }
+            }
+
+            button[type=login] {
+                border-radius: 10px;
+                border: 2px solid blue;
+                font-weight: bold;
+                color: red;
+                display: flex;
+                position: relative;
+                left: 77%;
+                bottom: 75%;
+
+                &:hover {
+                    color: white;
+                    cursor: pointer;
+                    background-color: red;
+                    transition: 1s;
+                }
+            }
+
+
+        }
+
+        .games {
+            grid-column-start: 1;
+            grid-column-end: 7;
+
+
+            &.adventure {
+                grid-row-start: 2;
+                grid-row-end: 6;
+                background-color: rgb(31, 85, 10);
+
+                &:hover {
+                    background-color: rgb(17, 46, 5);
+
+                }
+
+
+                &.one {
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 2;
+                    grid-row-end: 4;
+                    padding-left: 200px;
+                    padding-top: 0px;
+
+
+
+                    h2 {
+                        padding-left: 40px;
+                        cursor: pointer;
+                        padding-top: 3px;
+                        padding-bottom: 70px;
+                        padding-left: 10px;
+                        font-size: 150%;
+
+
+                        &:hover {
+                            text-shadow: rgb(148, 255, 105) 2px 2px;
+                        }
+                    }
+
+
+
+                }
+
+                &.two {
+                    grid-row-start: 4;
+                    grid-row-end: 5;
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    padding-top: 0px;
+
+                    p {
+                        position: absolute;
+                        padding-left: 430px;
+                        bottom: 0px;
+                        padding-bottom: 150px;
+
+                        cursor: pointer;
+
+
+
+
+                    }
+
+
+
+                }
+
+                &.three {
+                    grid-row-start: 5;
+                    grid-row-end: 6;
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    padding-top: 0px;
+
+                    p {
+                        position: absolute;
+                        padding-left: 430px;
+                        bottom: 0px;
+                        cursor: pointer;
+
+
+
+
+                    }
+
+
+                }
+
+
+
+
+                /*this is inorder to have the things change whenever i hover over them so the pic and text will change*/
+                .hover {
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.7;
+
+                        text-shadow: rgb(148, 255, 105) 2px 2px;
+
+
+                    }
+
+                    img {
+
+                        /*width: 200px;
+                    height: 20vh;*/
+                        display: block;
+                        margin: auto;
+                        border-radius: 10px;
+                        border: 2px solid green;
+
+
+
+                    }
+
+
+                    &.imgeffect {
+                        right: 65px;
+
+                        position: relative;
+
+
+
+                        img {
+                            position: absolute;
+                            transition: opacity 1s ease-in-out;
+                            left: 80px;
+                            width: 200px;
+                            height: 20vh;
+
+
+                            &.img-back:hover {
+                                opacity: 0;
+                                cursor: pointer;
+
+                            }
+                        }
+
+                        p {
+                            position: absolute;
+                            top: 50px;
+                            padding-left: 350px;
+
+
+                        }
+
+
+                    }
+
+
+
+
+
+
+
+
+                }
+
+            }
+
+            &.classic {
+
+                grid-row-start:6;
+                grid-row-end: 12;
+                margin: 20px;
+
+
+
+                &.one {
+                    
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 6;
+                    grid-row-end: 8;  
+                    padding-right: 310px;
+                    padding-top:0px;
+                                 
+
+                    h2 {
+                        padding-left: 250px;
+                        padding-bottom: 0px;
+
+                    }
+
+                    h2:hover {
+                        text-shadow: rgb(255, 19, 19)2px 2px;
+                        cursor: pointer;
+
+                    }
+
+                    img {
+                        width: 200px;
+                        height: 20vh;
+                        display: block;
+                        margin: auto;
+                        border-radius: 10px;
+
+
+                    }
+
+                    p {
+                        position: absolute;
+                        left:40%;
+                        top:130%;    
+                        cursor: pointer;
+
+
+
+
+                    }
+
+                }
+
+                &.two {
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 8;
+                    grid-row-end: 9;
+                    padding-top:0px;
+                    
+                    padding-left:240px;
+
+
+                    img {
+                        width: 200px;
+                        height: 20vh;
+                        display: block;
+                        margin: auto;
+                        border-radius: 10px;
+                    }
+                    p {
+                        position: absolute;
+                        left:30%;
+                        top:160%;    
+                        cursor: pointer;
+
+
+
+
+                    }
+
+
+                }
+
+                &.three {
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 9;
+                    grid-row-end: 10;                    
+                    padding-right:310px;
+
+                    img {
+                        width: 200px;
+                        height: 20vh;
+                        display: block;
+                        margin: auto;
+                        border-radius: 10px;
+                    }
+                    p {
+                        position: absolute;
+                        left:40%;
+                        top:180%;  
+                        cursor: pointer;
+
+                    }
+
+                }
+
+                &.four {
+
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 10;
+                    grid-row-end: 11;
+                    padding-left:240px;
+
+                    img {
+                        width: 200px;
+                        height: 20vh;
+                        display: block;
+                        margin: auto;
+                        border-radius: 10px;
+                    }
+                    p {
+                        position: absolute;
+                        left:30%;
+                        top:200%;    
+                        cursor: pointer;
+
+                    }
+
+                    
+                }
+
+                &.five {
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 11;
+                    grid-row-end: 12;
+                    padding-right:310px;
+                    
+
+
+                    img {
+                        width: 200px;
+                        height: 20vh;
+                        display: block;
+                        margin: auto;
+                        border-radius: 10px;
+                        
+                    }
+
+                    p {
+                        position: absolute;
+                        left:40%;
+                        top:220%;  
+                        cursor: pointer;
+
+                    }
+
+                }
+
+                .hover {
+
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.7;
+                        text-shadow: rgb(255, 19, 19) 2px 2px;
+
+
+
+                    }
+
+                    img {
+                        border: 10px solid rgb(255, 3, 3);
+                    }
+
+
+
+
+
+                }
+
+
+
+
+
+            }
+
+            &.multiplayer {
+                background-color: rgb(194, 25, 143);
+                grid-row-start: 12;
+                grid-row-end: 16;
+
+                &:hover {
+                    background-color: rgb(133, 16, 98);
+
+                }
+
+
+                &.one {
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 12;
+                    grid-row-end: 14;
+
+                    h2 {
+                        padding-left: 100px;
+                        cursor: pointer;
+                        padding-top: 30px;
+                        padding-bottom: 30px;
+                        padding-left: 200px;
+
+
+                        &:hover {
+                            text-shadow: rgb(243, 105, 255) 2px 2px;
+
+                        }
+                    }
+
+
+                    p {
+
+                        padding-left: 480px;
+                        cursor: pointer;
+                        text-align: start;
+                        position: absolute;
+                        top: 260%;
+
+
+
+
+
+                    }
+
+
+
+                    img {
+                        width: 200px;
+                        height: 20vh;
+
+                    }
+
+
+                }
+
+                &.two {
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 14;
+                    grid-row-end: 15;
+                    padding-top: 0px;
+
+                    p {
+
+                        padding-left: 480px;
+                        cursor: pointer;
+                        text-align: start;
+                        position: absolute;
+                        top: 285%;
+
+
+
+
+
+                    }
+
+
+                }
+
+                &.three {
+                    grid-column-start: 1;
+                    grid-column-end: 7;
+                    grid-row-start: 15;
+                    grid-row-end: 16;
+                    padding-top: 0px;
+
+                    p {
+
+                        padding-left: 480px;
+                        cursor: pointer;
+                        text-align: start;
+                        position: absolute;
+                        top: 305%;
+                        padding-bottom: 20%;
+
+
+
+
+
+                    }
+
+
+                }
+
+
+                /*this is inorder to have the things change whenever i hover over them so the pic and text will change*/
+                .hover {
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.7;
+                        text-shadow: rgb(255, 123, 215) 2px 2px;
+
+
+                    }
+
+                    img {
+                        /*width: 200px;
+                    height: 20vh;*/
+                        display: block;
+                        margin: auto;
+                        border-radius: 10px;
+                        border: 2px solid rgb(247, 110, 185);
+
+
+
+                    }
+
+                }
+            }
+
+        }
+
+
+    }
 
 
 
