--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/style2.scss
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/style2.scss
@@ -191,8 +191,15 @@ body {
         margin-right: 10px;
         border-radius: 20px;
 
-        &::-webkit-scrollbar {
-            width: 0px;
+        &::-webkit-slider-track{
+
+            width: 100%;
+            height: 20px;
+            background: #171717;
+        }
+
+        &::-webkit-slider-thumb{
+            background: rgb(53, 53, 53);
         }
 
     }
@@ -207,7 +214,7 @@ body {
         align-items: center;
         transition: all 0.8s;
         min-width: 210px;
-        height: 79%;
+        height: 69%;
         margin-right: 10px;
 
         &:hover {
