--- a/01-HTML-CSS/07-SCSS/Or/HomeTask/style.scss
+++ b/01-HTML-CSS/07-SCSS/Or/HomeTask/style.scss
@@ -9,12 +9,12 @@ body {
         align-items: center;
         position: fixed;
         background-image: linear-gradient(60deg, #E21143, #FFB03A);
-        width: 100vw;
+        width: 100%;
         height: 5vh;
         top: 0px;
         left: 0;
         z-index: 1;
-        font-size: x-large;
+        font-size: 3vh;
         color: black;
 
         a {
@@ -26,11 +26,13 @@ body {
             cursor: pointer;
             text-decoration: underline;
         }
-        .logo{
+
+        .logo {
             font-size: xx-large;
             font-weight: bolder;
         }
-        .logo:hover{
+
+        .logo:hover {
             text-decoration: none;
         }
 
@@ -44,7 +46,7 @@ body {
 
 .home {
     &__h1 {
-        font-size: 150px;
+        font-size: 10vw;
         background-image: linear-gradient(60deg, #E21143, #FFB03A);
         -webkit-background-clip: text;
         color: transparent;
@@ -56,6 +58,7 @@ body {
         -webkit-background-clip: text;
         color: transparent;
     }
+
 }
 
 
@@ -64,12 +67,12 @@ body {
 .wrapper {
     margin-top: 50px;
     margin-left: 25%;
-    width: 50vw;
-    height: 150vh;
     display: grid;
     gap: 30px;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 150px);
     grid-template-rows: 80px 150px 150px 80px 150px 150px;
+
+
 
     .box {
 
@@ -133,5 +136,46 @@ body {
             }
         }
 
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    .wrapper {
+        grid-template-columns: repeat(4, 150px);
+        grid-template-rows: 80px 150px 150px 150px 80px 150px 150px 150px;
+    }
+}
+
+@media only screen and (max-width:950px) {
+    .wrapper {
+        grid-template-columns: 150px 150px 150px;
+        grid-template-rows: 80px 150px 150px 150px 80px 150px 150px 150px 150px;
+
+    }
+}
+
+@media only screen and (max-width:600px) {
+    .wrapper {
+
+        grid-template-columns: repeat(2, 150px);
+    }
+}
+
+@media only screen and (max-width:300px) {
+    .wrapper {
+        grid-template-columns: repeat(1, 150);
+        grid-template-rows: 80px 150px 150px 80px 150px 150px 150px 150px;
+
+        .box {
+            &__big1 {
+                grid-column: span 1;
+                grid-row: span 1;
+            }
+
+            &__big2 {
+                grid-column: span 1;
+                grid-row: span 1;
+            }
+        }
     }
 }
