--- a/01-HTML-CSS/07-SCSS/Or/HomeTask/style.scss
+++ b/01-HTML-CSS/07-SCSS/Or/HomeTask/style.scss
@@ -3,6 +3,7 @@ body {
     background-color: black;
     font-family: 'Outfit', sans-serif;
 
+
     .menu {
         display: flex;
         justify-content: space-evenly;
@@ -70,7 +71,13 @@ body {
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(5, 150px);
-    grid-template-rows: 80px 150px 150px 80px 150px 150px;
+    grid-template-rows: 150px 150px 150px 150px 150px 150px;
+   .header{
+        margin-right: 450px;
+        background-image: linear-gradient(60deg, #E21143, #FFB03A);
+        -webkit-background-clip: text;
+        color: transparent;
+    }
 
 
 
@@ -107,12 +114,7 @@ body {
         }
 
 
-        &__h1 {
-            margin-right: 450px;
-            background-image: linear-gradient(60deg, #E21143, #FFB03A);
-            -webkit-background-clip: text;
-            color: transparent;
-        }
+
 
         &:hover {
             transform: scale(1.2);
@@ -120,16 +122,16 @@ body {
 
         }
 
-        &__header {
-            grid-column-end: span 4;
+        // &__header {
+        //     grid-column-end: span 4;
 
             &:hover {
                 transform: scale(1);
             }
         }
 
-        &__second-header {
-            grid-column-end: span 4;
+        // &__second-header {
+        //     grid-column-end: span 4;
 
             &:hover {
                 transform: scale(1);
@@ -142,14 +144,14 @@ body {
 @media only screen and (max-width:1200px) {
     .wrapper {
         grid-template-columns: repeat(4, 150px);
-        grid-template-rows: 80px 150px 150px 150px 80px 150px 150px 150px;
+        grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px;
     }
 }
 
 @media only screen and (max-width:950px) {
     .wrapper {
         grid-template-columns: 150px 150px 150px;
-        grid-template-rows: 80px 150px 150px 150px 80px 150px 150px 150px 150px;
+        grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px 150px;
 
     }
 }
@@ -164,7 +166,7 @@ body {
 @media only screen and (max-width:300px) {
     .wrapper {
         grid-template-columns: repeat(1, 150);
-        grid-template-rows: 80px 150px 150px 80px 150px 150px 150px 150px;
+        grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px;
 
         .box {
             &__big1 {
